--- a/mailer.yml
+++ b/mailer.yml
@@ -1,5 +1,5 @@
-queue_url: https://sqs.us-west-2.amazonaws.com/842337631775/cloud-custodian-mailer
-role: arn:aws:iam::842337631775:role/cloud-custodian-mailer-sqs
-from_address: stephanie@1strategy.com
+queue_url: https://sqs.us-west-2.amazonaws.com/{accountId}/cloud-custodian-mailer
+role: arn:aws:iam::{accountId}:role/cloud-custodian-mailer-sqs
+from_address: test@example.com
 region: us-west-2
 debug: True
